# zkevm-harness

./: .cruft.json  .gitignore  Makefile  README.md  log.txt  pyproject.toml
.github/actions/with-docker/: Dockerfile  action.yml
.github/workflows/: test-pr.yml  update-deps.yml
9000/add-test/: Cargo.toml
9000/add-test/src/: main.rs
9000/proofs/: ADD-TEST-proof-result.txt
9000/proofs/ADD-TEST/: proof.json
9000/proofs/ADD-TEST/kcfg/: kcfg.json
9000/proofs/ADD-TEST/kcfg/nodes/: 1.json  2.json  3.json
docs/: specs.md
nix/: README.md
nix/zkevm-harness/: default.nix
src/tests/integration/: conftest.py  test_integration.py  test_prove.py  utils.py
src/tests/integration/test-data/binaries/: add-test-sp1  addmod-test-sp1  address-test-sp1  and-test-sp1  basefee-test-sp1  blobbasefee-test-sp1  blobhash-test-sp1  byte-test-sp1  calldatacopy-test-sp1  calldataload-test-sp1  calldatasize-test-sp1  caller-test-sp1  callvalue-test-sp1  chainid-test-sp1  codecopy-test-sp1  codesize-test-sp1  coinbase-test-sp1  create-test-sp1  create2-test-sp1  div-test-sp1  dup1-test-sp1  dup10-test-sp1  dup11-test-sp1  dup12-test-sp1  dup13-test-sp1  dup14-test-sp1  dup15-test-sp1  dup16-test-sp1  dup2-test-sp1  dup3-test-sp1  dup4-test-sp1  dup5-test-sp1  dup6-test-sp1  dup7-test-sp1  dup8-test-sp1  dup9-test-sp1  eq-test-sp1  exp-test-sp1  gas-test-sp1  gaslimit-test-sp1  (+104 more)
src/tests/unit/: test_unit.py
src/zkevm_harness/: solc.py  utils.py
src/zkevm_harness/kdist/: plugin.py
src/zkevm_harness/kdist/zkevm-semantics/: risc0.k  sp1.k
(+243 files in other folders)
