[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zkevm-harness"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "kriscv@git+https://github.com/runtimeverification/riscv-semantics.git@v0.1.111"
]

[[project.authors]]
name = "Runtime Verification, Inc."
email = "contact@runtimeverification.com"

[project.entry-points.kdist]
zkevm-semantics = "zkevm_harness.kdist.plugin"

[dependency-groups]
dev = [
    "autoflake",
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-quotes",
    "flake8-type-checking",
    "isort",
    "mypy",
    "pep8-naming",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
    "pytest-xdist",
    "pyupgrade",
]

[tool.uv]
override-dependencies = [
    "gitpython>3.1.17,<4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
log_level = "INFO"

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
